# didas

./: .gitignore  Makefile  README.md  biome.json  pyproject.toml  renovate.json  setup.cfg  setup_requirements.txt
.devcontainer/: bashrc_extension.sh  devcontainer.json  onCreateCommand.sh
.github/: CODEOWNERS
.github/linters/: .flake8  .mypy.ini  .python-lint  .ruff.toml
.github/workflows/: build.yml  linter.yml  pypi.yml
didas/: __init__.py  mlflow.py  oracle.py  oracle_reseved_word_list.py  version.py
src/didas/: __init__.py  oracle.py
