[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "didas/_version.py"
write_to_template = "__version__ = '{version}'\n"

[project]
name = "didas"
dynamic = ["version"]
description = "Python Commons for Didas"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "cx-Oracle",
    "SQLAlchemy",
    "tqdm",
    "google-auth",
    "requests",
    "pandas",
    "mlflow-skinny",
]
