[metadata]
name = didas
version = attr: didas.__version__
author = DiDas
author_email = georgfriedrich.wendorf@md.de
description = Python Commons for Didas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freenet-group/didas/
project_urls =
    Bug Tracker = https://github.com/freenet-group/didas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
packages = didas
install_requires = 
    cx-Oracle
    SQLAlchemy
    tqdm
    google-auth
    requests
    pandas
